// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff petstore diff 1`] = `
"
specification details:
- /servers/2 [32madded[39m
- /info/title [33mchanged[39m

[1mGET[22m /pet/findByStatus: [32madded[39m
  
[1mGET[22m /pet/findByTags: [32madded[39m
  
[1mGET[22m /pet/{petId}: [32madded[39m
  
[1mPOST[22m /pet/{petId}: [32madded[39m
  
[1mDELETE[22m /pet/{petId}: [32madded[39m
  
[1mPUT[22m /user/{username}: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/properties/bio [32madded[39m
      - /schema/properties/userStatus, /schema/properties/lastName, /schema/properties/username [33mchanged[39m
      - /schema/properties/phone [31mremoved[39m
      
[1mGET[22m /user/{username}: 
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/bio [32madded[39m
      - /schema/properties/userStatus, /schema/properties/lastName, /schema/properties/username [33mchanged[39m
      - /schema/properties/phone [31mremoved[39m
      
    - body [1mapplication/xml[22m: 
      - /schema/properties/bio [32madded[39m
      - /schema/properties/userStatus, /schema/properties/lastName, /schema/properties/username [33mchanged[39m
      - /schema/properties/phone [31mremoved[39m
      
  - response [1m404[22m: 
    - body [1mapplication/json[22m: [32madded[39m
      
[1mGET[22m /user/login: 
  - response [1m200[22m: 
    - response header [3mcontent-type[23m: [31mremoved[39m
    - response header [3mX-Rate-Limit[23m: [32madded[39m
      
    - response header [3mX-Expires-After[23m: 
      - /schema/type [33mchanged[39m
      
    - response header [3mX-Expires-After[23m: [32madded[39m
      - /schema/format [32madded[39m
      
[1mPOST[22m /user/createWithList: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/items/properties/bio [32madded[39m
      - /schema/items/properties/userStatus [33mchanged[39m
      - /schema/items/properties/phone [31mremoved[39m
      
[1mPOST[22m /user/createWithArray: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/items/properties/bio [32madded[39m
      - /schema/items/properties/userStatus [33mchanged[39m
      - /schema/items/properties/phone [31mremoved[39m
      
[1mPOST[22m /user: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/properties/bio [32madded[39m
      - /schema/properties/userStatus, /schema/properties/lastName, /schema/properties/username [33mchanged[39m
      - /schema/properties/phone [31mremoved[39m
      
[1mDELETE[22m /store/order/{orderId}: 
  - response [1m404[22m: 
    - body [1mapplication/json[22m: [32madded[39m
      
[1mGET[22m /store/order/{orderId}: 
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/summary [32madded[39m
      - /schema/properties/status [33mchanged[39m
      
    - body [1mapplication/xml[22m: 
      - /schema/properties/summary [32madded[39m
      - /schema/properties/status, /schema/properties/petId [33mchanged[39m
      
  - response [1m404[22m: 
    - body [1mapplication/json[22m: [32madded[39m
      
[1mPOST[22m /store/order: 
  - request: 
    - body [1m*/*[22m: 
      - /schema/properties/summary [32madded[39m
      - /schema/properties/status [33mchanged[39m
      
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/summary, /example [32madded[39m
      - /schema/properties/status [33mchanged[39m
      
    - body [1mapplication/xml[22m: 
      - /schema/properties/summary [32madded[39m
      - /schema/properties/status [33mchanged[39m
      
[1mPOST[22m /pet/{petId}/uploadImage: 
  - cookie parameter [3mdebug[23m: 
    - /schema/enum [32madded[39m
    
  - response [1m200[22m: [31mremoved[39m
  - response [1m201[22m: [32madded[39m
    
  - response [1m404[22m: [32madded[39m
    
  - response [1mdefault[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/type [33mchanged[39m
      
[1mGET[22m /pet: [31mremoved[39m
  
[1mPOST[22m /pet: 
  - /operationId [33mchanged[39m
  
[1mPUT[22m /pet: 
  - request: 
    - body [1mapplication/xml[22m: [31mremoved[39m
    - body [1mapplication/json[22m: 
      - /schema/properties/number [32madded[39m
      - /schema/properties/name [31mremoved[39m
      
  - response [1m400[22m: [31mremoved[39m
[1mGET[22m /parameters_at_path: 
  - /parameters [32madded[39m
  
[1mPOST[22m /example: 
  - query parameter [3msomethingelse[23m: [31mremoved[39m
[1mGET[22m /example: 
  - query parameter [3mdeletedQueryParameter[23m: [31mremoved[39m
  - query parameter [3maddedQueryParameter[23m: [32madded[39m
    
  - query parameter [3mrequiredToOptional[23m: 
    - /required [31mremoved[39m
    
  - query parameter [3moptionalToRequired[23m: 
    - /required [32madded[39m
    
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      - /schema/properties/requiredKeys/properties/addedRequiredKey [32madded[39m
      - /schema/properties/toTypeArrays, /schema/properties/fromTypeArrays, /schema/properties/requiredKeys/properties/requiredToOptional, /schema/properties/requiredKeys/properties/optionalToRequired, /schema/properties/expandableObject, /schema/properties/composedObject/allOf/0/properties/orderId, /schema/properties/stringOrNumberOrObject [33mchanged[39m
      - /schema/properties/requiredKeys/properties/deletedRequiredKey [31mremoved[39m
      
Checks

  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /example
    added rule: prevent new required query parameters
      [31m[31mx[39m[31m cannot add required query parameter addedQueryParameter to an existing operation. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:60:1906[24m

    changed rule: prevent requiring existing query parameters
      [31m[31mx[39m[31m cannot make optional query parameter 'optionalToRequired' required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:47:1494[24m

    added rule: query parameter naming check
      [31m[31mx[39m[31m addedQueryParameter is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:60:1906[24m

    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'requiredToOptional' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:114:3902[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'orderId'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:81:2600[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'deletedRequiredKey'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:112:3802[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'orderId' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:83:2701[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'fromTypeArrays' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:120:4226[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'toTypeArrays' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:119:4156[24m

    added rule: response property naming check
      [31m[31mx[39m[31m addedRequiredKey is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:115:3970[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /parameters_at_path
    added rule: prevent new required query parameters
      [31m[31mx[39m[31m cannot add required query parameter query_in_path to an existing operation. This is a breaking change.[39m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:158:4984[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 404. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:160:5026[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 405. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:161:5094[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPUT[22m /pet
    added rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot add a required request property 'number' to an existing operation. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:173:5555[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 400. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:254:8639[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /pet/{petId}/uploadImage
    changed rule: prevent cookie parameters enum breaking changes
      [31m[31mx[39m[31m cannot add an enum to restrict possible values for cookie parameter 'debug'. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:740:27031[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'code'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:406:14080[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'type'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:407:14150[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'message'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:408:14200[24m

    removed rule: prevent response status code removal
      [31m[31mx[39m[31m must not remove response status code 200. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:399:13841[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'type' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:806:29115[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPOST[22m /store/order


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /store/order/{orderId}
    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'petId' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:969:34944[24m



  [1m[42m[37m PASS [39m[49m[22m [1mDELETE[22m /store/order/{orderId}


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /user
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1077:39015[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1082:39273[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /user/createWithArray
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1117:40460[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1122:40728[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /user/createWithList
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1158:41945[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1163:42213[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /user/login
    added rule: header parameter naming check
      [31m[31mx[39m[31m X-Rate-Limit is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:1208:43553[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /user/{username}
    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'lastName' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1265:45501[24m

    changed rule: prevent making response property optional
      [31m[31mx[39m[31m cannot make required response property 'lastName' optional. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1286:46420[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'phone'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:827:29057[24m

    removed rule: prevent removing response property
      [31m[31mx[39m[31m cannot remove response property 'phone'. This is a breaking change.[39m
      at [4m$workspace$/petstore-base.json:848:29942[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1268:45660[24m

    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1289:46579[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mPUT[22m /user/{username}
    changed rule: prevent changing request property to required
      [31m[31mx[39m[31m cannot make a request property required. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1342:48332[24m

    changed rule: prevent request property type changes
      [31m[31mx[39m[31m expected request body property 'userStatus' to not change type. This is a breaking change.[39m
      at [4m$workspace$/petstore-updated.json:1347:48590[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet/findByStatus
    added rule: operation path component naming check
      [31m[31mx[39m[31m findByStatus is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:316:10941[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:367:12791[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:411:14652[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet/findByTags
    added rule: operation path component naming check
      [31m[31mx[39m[31m findByTags is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:446:15966[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:483:17424[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:527:19285[24m



  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /pet/{petId}
    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:596:21833[24m

    added rule: response property naming check
      [31m[31mx[39m[31m photoUrls is not snake_case[39m
      at [4m$workspace$/petstore-updated.json:637:23536[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPOST[22m /pet/{petId}


  [1m[42m[37m PASS [39m[49m[22m [1mDELETE[22m /pet/{petId}


5 operations added, 15 changed, 1 removed
[32m[1m154 checks passed[22m[39m
[31m[1m46 checks failed[22m[39m

[34m[1mSee the full history of this API by running "optic add petstore-base.json --history-depth 0"[22m[39m
[1m[34mRerun this command with the --web flag to view the detailed changes in your browser[39m[22m
"
`;

exports[`diff reads optic.dev.yml for rulesets 1`] = `
"
[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m3 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

[34m[1mSee the full history of this API by running "optic add example-api-v0.json --history-depth 0"[22m[39m
[1m[34mRerun this command with the --web flag to view the detailed changes in your browser[39m[22m
"
`;

exports[`diff two files, no repo or config 1`] = `
"
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mPOST[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
[1m[34mRerun this command with the --web flag to view the detailed changes in your browser[39m[22m
"
`;

exports[`diff with --standard arg 1`] = `
"
[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m3 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

[34m[1mSee the full history of this API by running "optic add example-api-v0.json --history-depth 0"[22m[39m
[1m[34mRerun this command with the --web flag to view the detailed changes in your browser[39m[22m
"
`;

exports[`diff with mock server custom rules 1`] = `
"
[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m Specification


  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m5 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

[34m[1mSee the full history of this API by running "optic add example-api-v0.json --history-depth 0"[22m[39m
[1m[34mRerun this command with the --web flag to view the detailed changes in your browser[39m[22m
"
`;

exports[`diff with mock server extends 1`] = `
"Extending ruleset from @test-org/ruleset-id

[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[42m[37m PASS [39m[49m[22m [1mGET[22m /example


  [1m[42m[37m PASS [39m[49m[22m [1mPATCH[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



  [1m[42m[37m PASS [39m[49m[22m [1mPUT[22m /example


  [1m[41m[37m FAIL [39m[49m[22m [1mGET[22m /invalid_name
    requirement rule: operation path component naming check
      [31m[31mx[39m[31m invalid_name is not camelCase[39m
      at [4m$workspace$/example-api-v1.json:31:632[24m



1 operation added, 3 changed, 1 removed
[32m[1m3 checks passed[22m[39m
[31m[1m2 checks failed[22m[39m

[34m[1mSee the full history of this API by running "optic add example-api-v0.json --history-depth 0"[22m[39m
[1m[34mRerun this command with the --web flag to view the detailed changes in your browser[39m[22m
"
`;

exports[`diff with mock server ruleset key on api spec 1`] = `
"
specification details:
- /x-optic-standard [32madded[39m

[1mGET[22m /invalid_name: [32madded[39m
  
[1mPOST[22m /example: [31mremoved[39m
  
[1mPATCH[22m /example: 
  - /operationId [33mchanged[39m
  
  - response [1m200[22m: [32madded[39m
    
[1mPUT[22m /example: 
  - /operationId [33mchanged[39m
  
[1mGET[22m /example: 
  - /operationId [33mchanged[39m
  
Checks

  [1m[41m[37m FAIL [39m[49m[22m [1mPOST[22m /example
    removed rule: prevent operation removal
      [31m[31mx[39m[31m cannot remove an operation. This is a breaking change.[39m
      at [4m$workspace$/example-api-v0.json:9:150[24m



1 operation added, 3 changed, 1 removed
[32m[1m0 checks passed[22m[39m
[31m[1m1 checks failed[22m[39m

[34m[1mSee the full history of this API by running "optic add example-api-v0.json --history-depth 0"[22m[39m
[1m[34mRerun this command with the --web flag to view the detailed changes in your browser[39m[22m
"
`;

exports[`diff with mock server uploads specs if authenticated and --upload 1`] = `
"
[1mPATCH[22m /example: 
  - response [1m200[22m: 
    - body [1mapplication/json[22m: 
      
Checks

  [1m[41m[37m FAIL [39m[49m[22m [1mPATCH[22m /example
    changed rule: prevent response property type changes
      [31m[31mx[39m[31m expected response body application/json root shape to not change type. This is a breaking change.[39m
      at [4m$workspace$/spec.json:24:565[24m



1 operation changed
[32m[1m0 checks passed[22m[39m
[31m[1m1 checks failed[22m[39m

[32m✔[39m Uploaded results of diff to http://localhost:3000/organizations/org-id/apis/api-id/runs/run-id
"
`;
